--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toNumber",
+  "name": "to-number",
   "version": "1.0.0",
   "description": "Convert strings to their numeric representations",
   "main": "index.js",
